# vqcmvc

./: README.md  test.py
.devcontainer/: Dockerfile  devcontainer.json  pyproject.toml
configs/: eval.yaml  train.yaml
configs/callbacks/: default.yaml  model_summary.yaml  rich_progress_bar.yaml
configs/data/: cmvc.yaml
configs/model/: cmvc copy.yaml  cmvc.yaml
configs/paths/: default.yaml
configs/trainer/: ddp.yaml  default.yaml
notebooks/: crosstest.ipynb  test.ipynb  test2.ipynb
src/: eval.py  train.py
src/data/: datamodule.py  dataset.py
src/data/components/: transforms.py
src/models/: cmvc.py
src/models/components/: activation.py  block.py  layer.py  net.py
src/utils/: utils.py
tests/: test_configs.py  test_models.py
