[tool.poetry]
name = "workspace"
version = "0.1.0"
description = ""
authors = ["kjun1 <p.k.maejima1211@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.9"
torch = "^1.13.1"
torchaudio = "^0.13.1"
torchvision = "^0.14.1"
pytorch-lightning = "^1.9.0"
jupyterlab = "^3.6.1"
gradio = "^3.17.1"
pyworld = "^0.3.2"
pysptk = "^0.2.0"
librosa = "^0.9.2"
nnmnkwii = "^0.1.2"
matplotlib = "^3.6.3"
hydra-core = "^1.3.1"
hydra-colorlog = "^1.2.0"
hydra-optuna-sweeper = "^1.2.0"
rich = "^13.3.2"
tensorboard = "^2.12.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^0.991"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pyrootutils = "^1.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
